--- a/app/static/index.html
+++ b/app/static/index.html
@@ -38,16 +38,19 @@
   <script src="lib/lodash/dist/lodash.js"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/ng-ckeditor/ng-ckeditor.js"></script>
-  <script src="lib/ckeditor/ckeditor.js"></script>
+  <script src="lib/ckeditor2/ckeditor.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="lib/angular-ui-date/src/date.js"></script>
+  <script src="lib/angular-file-upload/angular-file-upload.js"></script>
+
 
   <script src="js/app.js"></script>
   <script src="js/home/home-controller.js"></script>
   <script src="js/home/create-post.js"></script>
+  <script src="js/home/upload-controller.js"></script>
 
   
 </body>
